--- a/app/layouts/_default/baseof.html
+++ b/app/layouts/_default/baseof.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="{{ .Site.LanguageCode }}">
   <head>
-    <title>{{ if .Title }}{{ .Title }} • {{ end }}Photos • {{ .Site.Title }}</title>
+    <title>{{ if .Title }}{{ .Title }} • {{ end }}{{ .Site.Title }}</title>
     {{ partial "head/meta.html" . }}
 
     {{ partial "head/stylesheet.html" "styles/fonts.scss" }}
