Implement passwordless authentication.
This uses signed JWTs to verify the identity of an email address.

--- a/app/layouts/_default/baseof.html
+++ b/app/layouts/_default/baseof.html
@@ -9,6 +9,11 @@
     {{ partial "head/script.html" "scripts/index.js" }}
   </head>
   <body>
+    <header>
+      <nav>
+        <a href="/logout">Log out</a>
+      </nav>
+    </header>
     {{ block "body" . -}}{{- end }}
   </body>
 </html>
